[package]
name = "mbr-fisherman"
version = "0.1.0"
edition = "2018"
authors = ["Massbit <contact@massbit.io>"]
description = "Check check component and report"
homepage = "https://www.massbit.io/"
repository = "https://github.com/massbitprotocol/massbitroute_monitor"
readme = "README.md"
keywords = ["checking", "massbit-route","massbit"]
license = "MIT"

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
minifier = "0.0.42"
clap = "3.0"
reqwest =  { version = "0.11" , features = ["multipart"] }
tokio = { version = "1.16" , features = ["full"] }
futures-util = "0.3"
timer = "0.2"
chrono = "0.4"
futures = "0.3"
log = { version = "0.4", features = ["std"] }
logger = { path = "../logger" }
handlebars = "4.2"
warp = "0.3"
slog = "2.7"
lazy_static = "1.4"
mbr-check-component = { path = "../check_component" }
mbr-stats = { path = "../mbr_stats" }

sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
parity-scale-codec = "3.1"
